[gd_scene format=3 uid="uid://bjf5i4gqcsgxe"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_8ln24"]
[ext_resource type="Shader" uid="uid://dgq7piqqkn3ml" path="res://assets/shaders/scroll.gdshader" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://bjvt3wqwryd47" path="res://assets/sprites/main_menu/2x2.png" id="2_bqqt6"]
[ext_resource type="PackedScene" uid="uid://b3s4q7wupl6vj" path="res://scenes/volume_slider.tscn" id="3_bqqt6"]
[ext_resource type="Script" path="res://scripts/options_menu.gd" id="3_wu84c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wu84c"]
shader = ExtResource("1_ekxnf")
shader_parameter/speed = 1.0
shader_parameter/red = 0.0
shader_parameter/green = 0.545
shader_parameter/blue = 0.435
shader_parameter/alpha = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]

[sub_resource type="Animation" id="Animation_bqqt6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-74, -21)]
}

[sub_resource type="Animation" id="Animation_8ln24"]
resource_name = "swipe"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-74, -21), Vector2(-985, -21)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ln24"]
_data = {
&"RESET": SubResource("Animation_bqqt6"),
&"swipe": SubResource("Animation_8ln24")
}

[node name="MainMenu" type="Node2D" unique_id=2008797064]
script = ExtResource("1_8ln24")

[node name="TextureRect" type="TextureRect" parent="." unique_id=995024685]
texture_repeat = 2
material = SubResource("ShaderMaterial_wu84c")
offset_left = -1442.0
offset_top = -1053.0
offset_right = 1366.0
offset_bottom = 1106.0
texture = ExtResource("2_bqqt6")
stretch_mode = 1

[node name="Camera2D" type="Camera2D" parent="." unique_id=942755436]

[node name="UI" type="Node2D" parent="." unique_id=244222436]
position = Vector2(-74, -21)

[node name="Menu" type="VBoxContainer" parent="UI" unique_id=1192612003]
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonStart" type="Button" parent="UI/Menu" unique_id=1219812212]
layout_mode = 2
text = "Start"

[node name="ButtonVolumeTutorial" type="Button" parent="UI/Menu" unique_id=385516267]
layout_mode = 2
text = "Volume & Tutorial"

[node name="Options" type="VBoxContainer" parent="UI" unique_id=1433247904]
offset_left = 831.0
offset_top = -176.0
offset_right = 1141.0
offset_bottom = 157.0
script = ExtResource("3_wu84c")

[node name="Panel" type="Panel" parent="UI/Options" unique_id=1273988939]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ekxnf")

[node name="TutorialLabel" type="Label" parent="UI/Options/Panel" unique_id=1897002229]
layout_mode = 0
offset_right = 306.0
offset_bottom = 249.0
text = "HOW  TO PLAY:

Mucho textoMucho textoMucho texto
Mucho textoMucho textoMucho texto
Mucho textoMucho textoMucho texto
Mucho textoMucho textoMucho texto"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Options" unique_id=1124400985]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Options/VBoxContainer" unique_id=1458466515]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" parent="UI/Options/VBoxContainer" unique_id=322674183 instance=ExtResource("3_bqqt6")]
layout_mode = 2

[node name="BackButton" type="Button" parent="UI/Options" unique_id=56986376]
layout_mode = 2
text = "Back"

[node name="Options2" type="VBoxContainer" parent="UI" unique_id=1593086149]
offset_left = 831.0
offset_top = -176.0
offset_right = 1141.0
offset_bottom = 157.0
script = ExtResource("3_wu84c")

[node name="Panel" type="Panel" parent="UI/Options2" unique_id=1156145998]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ekxnf")

[node name="TutorialLabel" type="Label" parent="UI/Options2/Panel" unique_id=1291927539]
layout_mode = 0
offset_right = 306.0
offset_bottom = 249.0
text = "TUTORIAL

W,A,S,D to move
E to give the dog a toy

Get more balls than your dog!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Options2" unique_id=858626985]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Options2/VBoxContainer" unique_id=942344774]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" parent="UI/Options2/VBoxContainer" unique_id=381435480 instance=ExtResource("3_bqqt6")]
layout_mode = 2

[node name="BackButton" type="Button" parent="UI/Options2" unique_id=1528671062]
layout_mode = 2
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI" unique_id=391135896]
libraries/ = SubResource("AnimationLibrary_8ln24")

[connection signal="pressed" from="UI/Menu/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="UI/Menu/ButtonVolumeTutorial" to="." method="_on_button_volume_tutorial_pressed"]
[connection signal="pressed" from="UI/Options/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="UI/Options2/BackButton" to="." method="_on_back_button_pressed"]
